k8s/17-ingress/nginx-ingress/ingress-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-app-service
  labels:
    app: nginx
    tier: frontend
spec:
  type: NodePort
  selector:
    app: nginx
    tier: frontend
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-app-service-2
  labels:
    app: httpd
    tier: frontend
spec:
  type: NodePort
  selector:
    app: httpd
    tier: frontend
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      tier: frontend
      color: red
  template:
    metadata:
      name: ingress-app-pod
      labels:
        app: nginx
        tier: frontend
        color: red
    spec:
      containers:
        - name: ingress-app-container
          image: nginx
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app-deployment-2
  labels:
    app: httpd
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
      tier: frontend
  template:
    metadata:
      name: ingress-app-pod-2
      labels:
        app: httpd
        tier: frontend
    spec:
      containers:
        - name: ingress-app-container-2
          image: httpd
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: ingress-app-volume-2
              mountPath: /usr/local/apache2/htdocs/health/index.html
              subPath: index.html
      volumes:
        - name: ingress-app-volume-2
          configMap:
            name: ingress-app-configmap-2
