k8s/17-ingress/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-app-service
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: ingress-app-service-2
                port:
                  number: 80
